# utsikt-dataprodukt

./: .gitignore  LICENSE  README.md  airflow_dbt_operator.py  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yaml
dags/: run_clean_stoppstatus_snapshot.py  run_utsikt_dataprodukt.py
dbt_utsikt/: .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  dbt_run.py  dbt_run_airflow.py  main.py  profiles.yml  publish_docs.py  pyproject.toml  run_stoppstatus_snapshot.py
dbt_utsikt/docs/: comments_custom.yml  comments_source.yml  generate_comments_from_sql.py  get_comments_from_source.py  landingsside.md
dbt_utsikt/models/marts/: antall_beregninger_per_faggruppe_per_dag.sql  antall_beregninger_per_fagomrade_per_dag.sql  antall_beregninger_per_ventestatus_per_dag.sql  antall_venteregister_beregninger_per_dag_per_fagomrade.sql  antall_venteregister_beregninger_per_faggruppe_per_dag.sql  antall_venteregister_beregninger_per_fagomrade_per_dag.sql  antall_venteregister_beregninger_per_ventestatus_per_dag.sql  antall_venteregister_beregninger_per_ventestatus_per_maned.sql  ventestatus_lengde_per_stoppniva.sql
dbt_utsikt/models/staging/: _staging_models.yml  sources.yml  stg_db2os__beregninger.sql  stg_db2os__faggrupper.sql  stg_db2os__fagomrader.sql  stg_db2os__oppdrag.sql  stg_db2os__oppdrag_kilde.sql  stg_db2os__stoppnivaer.sql  (+9 more)
dbt_utsikt/snapshots/: stoppstatus_snapshot.yml
dbt_utsikt/tests/: eldre_enn_to_ar_gammelt.sql  test_antall_rader_til_snapshot.sql
python_scripts/: clean_stoppstatus_snapshot.py
queries/: update_tidspkt_reg_stoppstatus.sql
(+36 files in other folders)
