[project]
name = "utsikt-dataprodukt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.9.2",
]

[dependency-groups]
dev = [
    "sqlfluff>=3.4.2",
    "sqlfluff-templater-dbt>=3.4.2",
    "toml-to-requirements>=0.3.0",
]
