[project]
name = "utsikt-dataprodukt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.10.3",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".sqlfluff"
    ]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "sqlfluff>=3.4.2",
    "sqlfluff-templater-dbt>=3.4.2",
    "toml-to-requirements>=0.3.0",
]
